add mab grade result

--- a/Intro/index.html
+++ b/Intro/index.html
@@ -67,16 +67,16 @@
     <script>
     // 테스트 문항 데이터
     const questions = [
-        "매운 음식을 먹으면 땀이 나나요?",
-        "매운 음식을 먹을 때 물을 자주 마시나요?",
-        "불닭볶음면을 완식할 수 있나요?",
-        "매운 음식을 먹고 난 후 속이 불편한가요?",
-        "친구들과 비교했을 때 매운 음식을 잘 먹는 편인가요?",
-        "매운 음식을 먹을 때 우유나 요구르트를 준비하나요?",
-        "평소에 매운 음식을 자주 찾아 먹나요?",
-        "새로운 매운 음식에 도전하는 것을 즐기나요?",
-        "매운 음식점에서 '매움 주의' 메뉴를 시도해본 적이 있나요?",
-        "매운 음식을 먹으면서 스트레스가 해소되나요?"
+        "매운 음식을 먹어도 땀이 나지 않아요",
+        "매운 음식을 먹을 때 물이나 우유는 필요하지 않아요",
+        "불닭볶음면이 가끔 땡겨요",
+        "매운 음식을 먹고 난 후 탈난 적 없어요.",
+        "맵찔이라는 표현은 들어보지 않았어요.",
+        "생양파나 파프리카도 잘 먹어요.",
+        "음식에 고춧가루를 골라내지 않고 잘 먹어요.",
+        "새로운 매운 음식에 도전하는 것을 즐겨요!",
+        "매운 음식 먹으면 스트레스가 해소돼요!",
+        "진라면 순한맛은 없어도 됩니다."
     ];
     </script>
     <script src="../JS/script.js"></script>
